src/scss/06_components/paragraphs/_common.scss
// @file
// Styles for all paragraphs.

/* stylelint-disable max-nesting-depth */
.hdbt-admin {
  // Remove white background and paddings from first level of paragraph elements.
  .paragraphs-tabs-wrapper {
    > .form-item > .layer-wrapper {
      background-color: transparent;
      border: 0 none;
      box-shadow: 0 0 0 transparent;
      padding: 0;
    }

    .paragraph-type-label {
      font-size: remify(18px) !important;
    }

    table.field-multiple-table {
      > thead {
        box-shadow: 0 0 0 transparent;

        > tr {
          border: 0 none;
        }

        > tr > th {
          background: $color-white;
          box-shadow: none;
          padding-bottom: 0;
          padding-left: 0;
        }
      }
    }

    table.field-multiple-table .draggable {
      background-color: $color-white;
      margin-top: 0.5rem;

      // Hide the paragraph bullet when you are not able to organize paragraphs.
      td.paragraph-bullet::after {
        display: none;
      }

      > td + td {
        width: 100%;
      }
    }
  }

  // Hide "(all languages)" from all paragraph fields.
  // There's no alter hook or preprocess which can be used to easily remove
  // the "addTranslatabilityClue" from async paragraph fields.
  .translation-entity-all-languages {
    display: none;
  }

  .js & {
    // Reset padding on paragraph selection field.
    .field--widget-paragraphs .paragraphs-dropbutton-wrapper .dropbutton-multiple {
      padding: 0;
    }

    // Reset the excessive spacing on paragraph drag handles.
    .field--widget-paragraphs .field-multiple-drag {
      min-width: 30px;

      &.tabledrag-cell--only-drag {
        min-width: 12px;
      }
    }

    // Align paragraph labels to center.
    .paragraph-top .paragraph-type,
    .paragraph-top .paragraph-summary {
      align-self: center;
    }

    // Reset paddings on paragraphs content areas.
    .paragraphs-tabs-wrapper .field-multiple-table .draggable {
      > td {
        padding: 0;
      }

      .tabledrag-handle::after {
        margin: 0;
        padding: 0;
      }
    }

    // Hide Paragraph badge.
    .paragraphs-badge {
      display: none;
    }
  }
}

